[package]
name = "curlyconf"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

[dependencies]
log = "0.4.8"
once_cell = "1.4.0"
regex = "1.3.9"
serde = { version = "1.0.114" }
env_logger = "0.7.1"

[dev-dependencies]
serde = { version = "1.0.114", features = [ "derive" ] }
#env_logger = "0.7.1"
