[package]
name = "curlyconf-impl"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.11", features = [ "full", "visit-mut", "extra-traits" ] }
proc-macro2 = { version = "1.0.6", features = [ "span-locations" ] }
